[project]
name = "joystick-diagrams"
version = "2.1.1"
description = "Automatically create diagrams for your throttles, joysticks and custom HID devices"
readme = "readme.md"
requires-python = ">=3.11, <3.13"
authors = [{name = "Robert Cox"}]
dependencies = [
    "ply>=3.11,<4",
    "requests>=2.31.0,<3",
    "qt-material>=2.14,<3",
    "pydantic>=2.0,<3",
    "pyside6>=6.9.0,<7",
    "semver>=3.0.2,<4",
    "qtawesome>=1.3.0,<2",
    "cryptography>=41.0",
]

[project.urls]
Homepage = "https://www.joystick-diagrams.com"
Repository = "https://github.com/Rexeh/joystick-diagrams"

[project.scripts]
version_package = "joystick_diagrams.version:generate_version"

[dependency-groups]
dev = [
    "pre-commit>=3.6.0,<4",
    "pytest>=7.2.0,<8",
    "pytest-qt>=4.2.0,<5",
    "pytest-cov>=4.0.0,<5",
    "coveralls>=3.3.0,<4",
    "cx-freeze>=8.3.0,<9",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.distutils.build_exe]
silent = 3
optimize = 2
includes = [
    "joystick_diagrams.plugins.dcs_world_plugin",
    "joystick_diagrams.plugins.star_citizen_plugin",
    "joystick_diagrams.plugins.joystick_gremlin_plugin",
    "joystick_diagrams.plugins.fs2020_plugin",
    "joystick_diagrams.plugins.il2_sturmovik_plugin",
]
packages = [
    "asyncio",
    "joystick_diagrams.plugins.dcs_world_plugin",
    "joystick_diagrams.plugins.star_citizen_plugin",
    "joystick_diagrams.plugins.joystick_gremlin_plugin",
    "joystick_diagrams.plugins.fs2020_plugin",
    "joystick_diagrams.plugins.il2_sturmovik_plugin",
]
include_files = [
    "./img",
    "./templates",
    "./readme.md",
    "version_manifest.json",
    "./theme"
]
zip_include_packages = ["encodings"]
bin_excludes =  ["Qt6Pdf.dll", "QtOpenGL.pyd"]
excludes = [
    "tkinter",
    "test",
    "distutils",
    "unittest"
]
replace_paths = ["*="]

[tool.coverage.paths]
source = ["joystick_diagrams/"]

[tool.coverage.run]
omit = [
    ".*",
    "*/site-packages/*",
    "*/config.py",
    "*/plugins/*",
    "*/ui/*",
    "*/db*",
]

[tool.coverage.report]
fail_under = 40
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    'if __name__ == "__main__":',
]


[tool.pytest.ini_options]
markers = ["uitest"]

[tool.ruff]
exclude = ["qt_ui/*", "docs/*"]
target-version = "py311"

[tool.ruff.lint]
select = ["A", "E", "C90", "I", "W", "F", "B", "Q", "N", "PL"]

ignore = [
    "E501",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "PLR2004",
    "PLC0415"
]

unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools,qt_ui}/*" = ["E402", "PLR2004"]
"**/{ui}/*" = ["N", "PLR", "PLC0415"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ty.rules]
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["joystick_diagrams/input/", "joystick_diagrams/export*.py", "joystick_diagrams/template.py", "joystick_diagrams/version.py", "joystick_diagrams/utils.py", "joystick_diagrams/plugins/"]
exclude = ["joystick_diagrams/plugins/joystick_gremlin_plugin/"]
[tool.ty.overrides.rules]
unresolved-attribute = "error"

# minidom stubs are incomplete - suppress false positives
[[tool.ty.overrides]]
include = ["joystick_diagrams/plugins/joystick_gremlin_plugin/"]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
not-subscriptable = "ignore"

[[tool.ty.overrides]]
include = ["joystick_diagrams/ui/"]
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"

[[tool.ty.overrides]]
include = ["tests/"]
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
